E COMMERCE PART 2/kubernetes/elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-deployment
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: elasticsearch:7.17.0
          ports:
            - containerPort: 9200
            - containerPort: 9300
          volumeMounts:
            - name: es-data
              mountPath: /usr/share/elasticsearch/data
          # Add resource limits and requests for production
          # resources:
          #   limits:
          #     cpu: "1"
          #     memory: "1Gi"
          #   requests:
          #     cpu: "500m"
          #     memory: "512Mi"
      volumes:
        - name: es-data
          persistentVolumeClaim:
            claimName: elasticsearch-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
spec:
  selector:
    app: elasticsearch
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
    - protocol: TCP
      port: 9300
      targetPort: 9300
